# MultieffectPlugin

./: CMakeLists.txt  Makefile
Source/code/dsp/: AudioAnalyzer.cpp  Delay.cpp  EQ.cpp  Parameters.cpp  PluginProcessor.cpp  Tremelo.cpp
Source/code/ui/: AudioGraph.cpp  EffectBox.cpp  EffectParamsBox.cpp  OscilloGraph.cpp  PluginEditor.cpp  PluginParamsBox.cpp  TurnableKnob.cpp  WaveformGraph.cpp
Source/code/ui/components/: DropDown.cpp  PowerButton.cpp  TurnableKnob.cpp
Source/code/ui/effects/: ._TremeloUIParams.cpp  ChorusUIParams.cpp  DelayUIParams.cpp  DistortionUIParams.cpp  FlangerUIParams.cpp  PhaserUIParams.cpp  ReverbUIParams.cpp  TremeloUIParams.cpp
Source/code/ui/graph/: AudioGraph.cpp  FrequencyGraph.cpp  OscilloGraph.cpp
Source/includes/dsp/: AudioAnalyzer.hpp  Delay.hpp  EQ.hpp  Parameters.hpp  PluginProcessor.h  Tremelo.hpp
Source/includes/ui/: AudioGraph.hpp  EffectBox.hpp  EffectParamsBox.hpp  PluginEditor.h  PluginParamsBox.hpp  TurnableKnob.hpp  WaveformGraph.hpp
Source/includes/ui/components/: DropDown.hpp  PowerButton.hpp  TurnableKnob.hpp
Source/includes/ui/effects/: ChorusUIParams.hpp  DelayUIParams.hpp  DistortionUIParams.hpp  FlangerUIParams.hpp  PhaserUIParams.hpp  ReverbUIParams.hpp  TremeloUIParams.hpp
Source/includes/ui/graph/: AudioGraph.hpp  FrequencyGraph.hpp  OscilloGraph.hpp
